<?xml version="1.0"?>
<package>
  <name>ros_groundstation</name>
  <version>1.0.0</version>
  <description>ground_station provides a gui for interacting with BYU Magicc Lab's ros_plane.</description>
  <maintainer email="andrew.torgesen@gmail.com">Andrew Torgesen</maintainer>

  <license>TODO</license>
  <url type="repository">(pending)</url>
  <author>Andrew Torgesen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosplane_msgs</run_depend>
  <run_depend>rosflight_msgs</run_depend>
  <run_depend>inertial_sense</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>
